k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: feat-tracking
  labels:
    app.kubernetes.io/name: feat-tracking
