k8s/23-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feat-tracking-app
  namespace: feat-tracking
  labels:
    app.kubernetes.io/name: feat-tracking-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: feat-tracking-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
