k8s/24-app-ingress.yaml
# Istio VirtualService exposing the app at https://telemetry-x.edge.sandisk.com
# via the cluster's shared istio-system/default-gateway.
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: sdsmcv-prd
  name: telemetryx-web
spec:
  hosts:
    - "telemetry-x.edge.sandisk.com"
  gateways:
    - istio-system/default-gateway
  http:
    - match:
        - uri:
            prefix: /assets
      route:
        - destination:
            host: telemetryx-app-service
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: telemetryx-app-service
            port:
              number: 80
